add cloudflare functions

--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "hono": "^4.10.6",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "worktop": "^0.7.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
