--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon --watch src --ext ts,json --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "migragte:all": "npx sequelize-cli db:migrate"
+    "migrate:all": "npx sequelize-cli db:migrate"
   },
   "keywords": [],
   "author": "",
