--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "resend": "^6.6.0",
     "sequelize": "^6.37.7",
     "worktop": "^0.7.3"
   },
